bk_ida/gobmkida/c1/show_debug_help
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/show_debug_help/src/interface/main.c:1766:10: error: use of undeclared identifier 'unk_493D2E'
fwrite( &unk_493D2E, 0x9B8uLL, 1uLL, stderr); 
         ^
1 error generated.
make: *** [/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/show_debug_help/src/obj/2/main.o] Error 1
